...
import io.github.tonnyl.moka.widget.PreferenceCategoryText
import io.github.tonnyl.moka.widget.PreferenceDivider
import io.github.tonnyl.moka.widget.TopAppBarElevation
import kotlinx.coroutines.CoroutineScope
import kotlinx.coroutines.launch

const val SettingScreenTestTag = "SettingScreenTestTag"
const val ChooseThemeTestTag = "ChooseThemeTestTag"
const val EnableNotificationsTestTag = "EnableNotificationsTestTag"
const val SyncIntervalTestTag = "SyncIntervalTestTag"

data class InitialParams(
    val theme: Settings.Theme,
    val enableNotifications: Boolean,
    val syncInterval: Settings.NotificationSyncInterval,
    val dnd: Boolean,
...
