...
    <string name="settings_clear_search_history_title">Clear search history</string>
    <string name="settings_cache_category">Cache</string>
    <string name="settings_keep_data_title">Keep data</string>
    <string name="settings_clear_local_data_title">Clear local data</string>
    <string name="settings_clear_image_cache_title">Clear image cache</string>

    <string name="settings_choose_theme_auto">Set by Battery Saver</string>
    <string name="settings_choose_theme_light">Light</string>
    <string name="settings_choose_theme_dark">Dark</string>

    <string name="sync_interval_one_quarter">15 minutes</string>
    <string name="sync_interval_thirty_minutes">30 minutes</string>
    <string name="sync_interval_one_hour">1 hour</string>
...
